--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
         "hex-rgb": "^3.0.0",
         "html-webpack-plugin": "^3.1.0",
         "http-server": "^0.11.1",
-        "node-sass": "^4.10.0",
+        "node-sass": "^6.0.1",
         "optimize-css-assets-webpack-plugin": "^4.0.0",
-        "picogl": "^0.10.0",
+        "picogl": "0.17.9",
         "postcss-loader": "^2.1.3",
         "query-string": "^6.2.0",
         "raw-loader": "^1.0.0",
